--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:nodemcu-32s]
-platform = espressif32
+latform = espressif32
 board = nodemcu-32s
 framework = arduino
 
